rmosh/src/lexer_iter.rs
/* Generated by re2c 3.0 on Sat Apr  8 04:19:27 2023 */
#![allow(clippy::all)]
use crate::lexer::{Lexer, Spanned, Token};
use crate::reader_util::ReadError;

impl<'input> Iterator for Lexer<'input> {
    type Item = Spanned<Token, usize, ReadError>;

    fn next(&mut self) -> Option<Self::Item> {
        loop {
            let should_skip_comment;
            let mut comment_level = 1;
            'lex: loop {
                self.tok = self.cursor;

                {
                    #[allow(unused_assignments)]
                    let mut yych: usize = 0;
                    let mut yyaccept: usize = 0;
                    let mut yystate: usize = 0;
                    'yyl: loop {
                        match yystate {
                            0 => {
                                yych = unsafe { *self.s.get_unchecked(self.cursor) as usize };
                                if yych <= 0x0000002F {
                                    if yych <= 0x00000023 {
                                        if yych <= 0x0000000D {
                                            if yych <= 0x00000000 {
                                                if self.cursor >= self.limit {
                                                    yystate = 434;
                                                    continue 'yyl;
                                                }
                                                self.cursor += 1;
                                                yystate = 1;
                                                continue 'yyl;
                                            }
                                            if yych <= 0x00000008 {
                                                self.cursor += 1;
                                                yystate = 3;
                                                continue 'yyl;
                                            }
                                            if yych >= 0x0000000D {
                                                self.cursor += 1;
                                                yystate = 5;
                                                continue 'yyl;
                                            }
                                            self.cursor += 1;
                                            yystate = 1;
                                            continue 'yyl;
                                        } else {
                                            if yych <= 0x00000020 {
                                                if yych <= 0x0000001F {
                                                    self.cursor += 1;
                                                    yystate = 3;
                                                    continue 'yyl;
                                                }
                                                self.cursor += 1;
                                                yystate = 1;
                                                continue 'yyl;
                                            } else {
                                                if yych <= 0x00000021 {
                                                    self.cursor += 1;
                                                    yystate = 6;
                                                    continue 'yyl;
                                                }
                                                if yych <= 0x00000022 {
                                                    self.cursor += 1;
                                                    yystate = 9;
                                                    continue 'yyl;
                                                }
                                                self.cursor += 1;
                                                yystate = 10;
                                                continue 'yyl;
                                            }
                                        }
                                    } else {
                                        if yych <= 0x0000002A {
                                            if yych <= 0x00000027 {
                                                if yych <= 0x00000026 {
                                                    self.cursor += 1;
                                                    yystate = 6;
                                                    continue 'yyl;
                                                }
                                                self.cursor += 1;
                                                yystate = 11;
                                                continue 'yyl;
                                            } else {
                                                if yych <= 0x00000028 {
                                                    self.cursor += 1;
                                                    yystate = 12;
                                                    continue 'yyl;
                                                }
                                                if yych <= 0x00000029 {
                                                    self.cursor += 1;
                                                    yystate = 13;
                                                    continue 'yyl;
                                                }
                                                self.cursor += 1;
                                                yystate = 6;
                                                continue 'yyl;
                                            }
                                        } else {
                                            if yych <= 0x0000002C {
                                                if yych <= 0x0000002B {
                                                    self.cursor += 1;
                                                    yystate = 14;
                                                    continue 'yyl;
                                                }
                                                self.cursor += 1;
                                                yystate = 15;
                                                continue 'yyl;
                                            } else {
                                                if yych <= 0x0000002D {
                                                    self.cursor += 1;
                                                    yystate = 14;
                                                    continue 'yyl;
                                                }
                                                if yych <= 0x0000002E {
                                                    self.cursor += 1;
                                                    yystate = 17;
                                                    continue 'yyl;
                                                }
                                                self.cursor += 1;
                                                yystate = 6;
                                                continue 'yyl;
                                            }
                                        }
                                    }
                                } else {
                                    if yych <= 0x0000005D {
                                        if yych <= 0x0000003F {
                                            if yych <= 0x00000039 {
                                                self.cursor += 1;
                                                yystate = 19;
                                                continue 'yyl;
                                            }
                                            if yych == 0x0000003B {
                                                self.cursor += 1;
                                                yystate = 21;
                                                continue 'yyl;
                                            }
                                            self.cursor += 1;
                                            yystate = 6;
                                            continue 'yyl;
                                        } else {
                                            if yych <= 0x0000005A {
                                                if yych <= 0x00000040 {
                                                    self.cursor += 1;
                                                    yystate = 3;
                                                    continue 'yyl;
                                                }
                                                self.cursor += 1;
                                                yystate = 6;
                                                continue 'yyl;
                                            } else {
                                                if yych <= 0x0000005B {
                                                    self.cursor += 1;
                                                    yystate = 12;
                                                    continue 'yyl;
                                                }
                                                if yych <= 0x0000005C {
                                                    self.cursor += 1;
                                                    yystate = 22;
                                                    continue 'yyl;
                                                }
                                                self.cursor += 1;
                                                yystate = 13;
                                                continue 'yyl;
                                            }
                                        }
                                    } else {
                                        if yych <= 0x0000007C {
                                            if yych <= 0x00000060 {
                                                if yych <= 0x0000005F {
                                                    self.cursor += 1;
                                                    yystate = 6;
                                                    continue 'yyl;
                                                }
                                                self.cursor += 1;
                                                yystate = 23;
                                                continue 'yyl;
                                            } else {
                                                if yych <= 0x0000007A {
                                                    self.cursor += 1;
                                                    yystate = 6;
                                                    continue 'yyl;
                                                }
                                                if yych <= 0x0000007B {
                                                    self.cursor += 1;
                                                    yystate = 3;
                                                    continue 'yyl;
                                                }
                                                self.cursor += 1;
                                                yystate = 24;
                                                continue 'yyl;
                                            }
                                        } else {
                                            if yych <= 0x0000007E {
                                                if yych <= 0x0000007D {
                                                    self.cursor += 1;
                                                    yystate = 3;
                                                    continue 'yyl;
                                                }
                                                self.cursor += 1;
                                                yystate = 6;
                                                continue 'yyl;
                                            } else {
                                                if yych <= 0x0000007F {
                                                    self.cursor += 1;
                                                    yystate = 3;
                                                    continue 'yyl;
                                                }
                                                if yych <= 0x0000FFFF {
                                                    self.cursor += 1;
                                                    yystate = 6;
                                                    continue 'yyl;
                                                }
                                                self.cursor += 1;
                                                yystate = 3;
                                                continue 'yyl;
                                            }
                                        }
                                    }
                                }
                            }
                            1 => {
                                yystate = 2;
                                continue 'yyl;
                            }
                            2 => {
                                continue 'lex;
                            }
                            3 => {
                                yystate = 4;
                                continue 'yyl;
                            }
                            4 => {
                                println!("invalid token {}", self.extract_token());
                                return Some(Err(ReadError::InvalidToken {
                                    start: self.tok,
                                    end: self.cursor,
                                    token: self.extract_token(),
                                }));
                            }
                            5 => {
                                yych = unsafe { *self.s.get_unchecked(self.cursor) as usize };
                                if yych <= 0x0000000A {
                                    if yych <= 0x00000000 {
                                        yystate = 4;
                                        continue 'yyl;
                                    }
                                    if yych <= 0x00000009 {
                                        yystate = 4;
                                        continue 'yyl;
                                    }
                                    self.cursor += 1;
                                    yystate = 1;
                                    continue 'yyl;
                                } else {
                                    if yych == 0x0000000D {
                                        self.cursor += 1;
                                        yystate = 1;
                                        continue 'yyl;
                                    }
                                    yystate = 4;
                                    continue 'yyl;
                                }
                            }
                            6 => {
                                yyaccept = 0;
                                self.marker = self.cursor;
                                yych = unsafe { *self.s.get_unchecked(self.cursor) as usize };
                                yystate = 7;
                                continue 'yyl;
                            }
                            7 => {
                                if yych <= 0x0000005A {
                                    if yych <= 0x00000026 {
                                        if yych <= 0x00000020 {
                                            if yych >= 0x00000001 {
                                                yystate = 8;
                                                continue 'yyl;
                                            }
                                            yystate = 8;
                                            continue 'yyl;
                                        } else {
                                            if yych <= 0x00000021 {
                                                self.cursor += 1;
                                                yystate = 6;
                                                continue 'yyl;
                                            }
                                            if yych >= 0x00000024 {
                                                self.cursor += 1;
                                                yystate = 6;
                                                continue 'yyl;
                                            }
                                            yystate = 8;
                                            continue 'yyl;
                                        }
                                    } else {
                                        if yych <= 0x0000002C {
                                            if yych <= 0x00000029 {
                                                yystate = 8;
                                                continue 'yyl;
                                            }
                                            if yych <= 0x0000002B {
                                                self.cursor += 1;
                                                yystate = 6;
                                                continue 'yyl;
                                            }
                                            yystate = 8;
                                            continue 'yyl;
                                        } else {
                                            if yych != 0x0000003B {
                                                self.cursor += 1;
                                                yystate = 6;
                                                continue 'yyl;
                                            }
                                            yystate = 8;
                                            continue 'yyl;
                                        }
                                    }
                                } else {
                                    if yych <= 0x00000060 {
                                        if yych <= 0x0000005C {
                                            if yych >= 0x0000005C {
                                                self.cursor += 1;
                                                yystate = 25;
                                                continue 'yyl;
                                            }
                                            yystate = 8;
                                            continue 'yyl;
                                        } else {
                                            if yych <= 0x0000005D {
                                                yystate = 8;
                                                continue 'yyl;
                                            }
                                            if yych <= 0x0000005F {
                                                self.cursor += 1;
                                                yystate = 6;
                                                continue 'yyl;
                                            }
                                            yystate = 8;
                                            continue 'yyl;
                                        }
                                    } else {
                                        if yych <= 0x0000007E {
                                            if yych <= 0x0000007A {
                                                self.cursor += 1;
                                                yystate = 6;
                                                continue 'yyl;
                                            }
                                            if yych >= 0x0000007E {
                                                self.cursor += 1;
                                                yystate = 6;
                                                continue 'yyl;
                                            }
                                            yystate = 8;
                                            continue 'yyl;
                                        } else {
                                            if yych <= 0x0000007F {
                                                yystate = 8;
                                                continue 'yyl;
                                            }
                                            if yych <= 0x0000FFFF {
                                                self.cursor += 1;
                                                yystate = 6;
                                                continue 'yyl;
                                            }
                                            yystate = 8;
                                            continue 'yyl;
                                        }
                                    }
                                }
                            }
                            8 => {
                                return self.with_location(Token::Identifier {
                                    value: self.extract_token(),
                                });
                            }
                            9 => {
                                yyaccept = 1;
                                self.marker = self.cursor;
                                yych = unsafe { *self.s.get_unchecked(self.cursor) as usize };
                                if yych <= 0x00000000 {
                                    if self.cursor >= self.limit {
                                        yystate = 2;
                                        continue 'yyl;
                                    }
                                    self.cursor += 1;
                                    yystate = 27;
                                    continue 'yyl;
                                }
                                yystate = 28;
                                continue 'yyl;
                            }
                            10 => {
                                yyaccept = 2;
                                self.marker = self.cursor;
                                yych = unsafe { *self.s.get_unchecked(self.cursor) as usize };
                                match yych {
                                    0x00000021 => {
                                        self.cursor += 1;
                                        yystate = 30;
                                        continue 'yyl;
                                    }
                                    0x00000027 => {
                                        self.cursor += 1;
                                        yystate = 31;
                                        continue 'yyl;
                                    }
                                    0x00000028 => {
                                        self.cursor += 1;
                                        yystate = 32;
                                        continue 'yyl;
                                    }
                                    0x0000002C => {
                                        self.cursor += 1;
                                        yystate = 33;
                                        continue 'yyl;
                                    }
                                    0x0000002F => {
                                        self.cursor += 1;
                                        yystate = 35;
                                        continue 'yyl;
                                    }
                                    0x00000030..=0x00000039 => {
                                        self.cursor += 1;
                                        yystate = 36;
                                        continue 'yyl;
                                    }
                                    0x0000003B => {
                                        self.cursor += 1;
                                        yystate = 37;
                                        continue 'yyl;
                                    }
                                    0x00000042 | 0x00000062 => {
                                        self.cursor += 1;
                                        yystate = 38;
                                        continue 'yyl;
                                    }
                                    0x00000044 | 0x00000064 => {
                                        self.cursor += 1;
                                        yystate = 39;
                                        continue 'yyl;
                                    }
                                    0x00000045 | 0x00000049 | 0x00000065 | 0x00000069 => {
                                        self.cursor += 1;
                                        yystate = 40;
                                        continue 'yyl;
                                    }
                                    0x00000046 => {
                                        self.cursor += 1;
                                        yystate = 41;
                                        continue 'yyl;
                                    }
                                    0x0000004F | 0x0000006F => {
                                        self.cursor += 1;
                                        yystate = 43;
                                        continue 'yyl;
                                    }
                                    0x00000054 => {
                                        self.cursor += 1;
                                        yystate = 44;
                                        continue 'yyl;
                                    }
                                    0x00000058 | 0x00000078 => {
                                        self.cursor += 1;
                                        yystate = 46;
                                        continue 'yyl;
                                    }
                                    0x0000005C => {
                                        self.cursor += 1;
                                        yystate = 47;
                                        continue 'yyl;
                                    }
                                    0x00000060 => {
                                        self.cursor += 1;
                                        yystate = 48;
                                        continue 'yyl;
                                    }
                                    0x00000066 => {
                                        self.cursor += 1;
                                        yystate = 49;
                                        continue 'yyl;
                                    }
                                    0x00000074 => {
                                        self.cursor += 1;
                                        yystate = 50;
                                        continue 'yyl;
                                    }
                                    0x00000075 => {
                                        self.cursor += 1;
                                        yystate = 51;
                                        continue 'yyl;
                                    }
                                    0x00000076 => {
                                        self.cursor += 1;
                                        yystate = 52;
                                        continue 'yyl;
                                    }
                                    0x0000007C => {
                                        self.cursor += 1;
                                        yystate = 53;
                                        continue 'yyl;
                                    }
                                    _ => {
                                        yystate = 4;
                                        continue 'yyl;
                                    }
                                }
                            }
                            11 => {
                                return self.with_location(Token::AbbrevQuote);
                            }
                            12 => {
                                return self.with_location(Token::LeftParen {
                                    value: self.extract_token(),
                                });
                            }
                            13 => {
                                return self.with_location(Token::RightParen {
                                    value: self.extract_token(),
                                });
                            }
                            14 => {
                                yyaccept = 0;
                                self.marker = self.cursor;
                                yych = unsafe { *self.s.get_unchecked(self.cursor) as usize };
                                if yych <= 0x00000049 {
                                    if yych <= 0x0000002E {
                                        if yych <= 0x00000000 {
                                            yystate = 8;
                                            continue 'yyl;
                                        }
                                        if yych <= 0x0000002D {
                                            yystate = 7;
                                            continue 'yyl;
                                        }
                                        self.cursor += 1;
                                        yystate = 54;
                                        continue 'yyl;
                                    } else {
                                        if yych <= 0x0000002F {
                                            yystate = 7;
                                            continue 'yyl;
                                        }
                                        if yych <= 0x00000039 {
                                            self.cursor += 1;
                                            yystate = 55;
                                            continue 'yyl;
                                        }
                                        if yych <= 0x00000048 {
                                            yystate = 7;
                                            continue 'yyl;
                                        }
                                        self.cursor += 1;
                                        yystate = 56;
                                        continue 'yyl;
                                    }
                                } else {
                                    if yych <= 0x00000068 {
                                        if yych == 0x0000004E {
                                            self.cursor += 1;
                                            yystate = 57;
                                            continue 'yyl;
                                        }
                                        yystate = 7;
                                        continue 'yyl;
                                    } else {
                                        if yych <= 0x00000069 {
                                            self.cursor += 1;
                                            yystate = 56;
                                            continue 'yyl;
                                        }
                                        if yych == 0x0000006E {
                                            self.cursor += 1;
                                            yystate = 57;
                                            continue 'yyl;
                                        }
                                        yystate = 7;
                                        continue 'yyl;
                                    }
                                }
                            }
                            15 => {
                                yych = unsafe { *self.s.get_unchecked(self.cursor) as usize };
                                if yych <= 0x00000000 {
                                    yystate = 16;
                                    continue 'yyl;
                                }
                                if yych == 0x00000040 {
                                    self.cursor += 1;
                                    yystate = 58;
                                    continue 'yyl;
                                }
                                yystate = 16;
                                continue 'yyl;
                            }
                            16 => {
                                return self.with_location(Token::AbbrevUnquote);
                            }
                            17 => {
                                yyaccept = 3;
                                self.marker = self.cursor;
                                yych = unsafe { *self.s.get_unchecked(self.cursor) as usize };
                                if yych <= 0x0000003B {
                                    if yych <= 0x00000029 {
                                        if yych <= 0x00000021 {
                                            if yych <= 0x00000000 {
                                                yystate = 18;
